<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/desc_4"/>

    <ImageView
        android:id="@+id/img_login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:src="@drawable/login_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="1dp"
        android:contentDescription="@string/desc_6"/>

    <ImageView
        android:id="@+id/img_login3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/login_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_4"/>

    <TextView
        android:id="@+id/text_login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login_2"
        android:textSize="30sp"
        android:fontFamily="@font/josefinslab"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_login2" />

    <TextView
        android:id="@+id/text_login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/login_3"
        android:textSize="18sp"
        android:fontFamily="@font/inika"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login1" />

    <EditText
        android:id="@+id/etext_login1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/login_4"
        android:fontFamily="@font/inter"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/text_login2"
        app:layout_constraintTop_toBottomOf="@+id/text_login1"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/text_login3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/login_5"
        android:textSize="18sp"
        android:fontFamily="@font/inika"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login2" />

    <EditText
        android:id="@+id/etext_login2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/login_6"
        android:fontFamily="@font/inter"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/text_login3"
        app:layout_constraintTop_toBottomOf="@+id/etext_login1"
        android:importantForAutofill="no"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/text_login4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:text="@string/login_7"
        android:textSize="13sp"
        android:fontFamily="@font/inter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etext_login2" />

    <TextView
        android:id="@+id/text_login5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/login_11"
        android:fontFamily="@font/inter"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/text_login4"
        app:layout_constraintTop_toBottomOf="@+id/etext_login2" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_1"
        android:text="@string/login_9"
        android:fontFamily="@font/inter"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login5" />

    <TextView
        android:id="@+id/text_login6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/login_10"
        android:fontFamily="@font/inter"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <TextView
        android:id="@+id/text_login7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/login_8"
        android:textSize="13sp"
        android:fontFamily="@font/inter"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/text_login6"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />





</androidx.constraintlayout.widget.ConstraintLayout>