<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="0dp"
    app:cardCornerRadius="15dp"
    android:padding="5dp"
    android:layout_marginTop="15dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="20dp">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivChatImg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc_7"
            android:src="@drawable/chat_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ChatTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="15dp"
            android:text="@string/chat_3"
            android:textSize="12sp"
            android:fontFamily="@font/inter"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivChatImg"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ChatTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/chat_1"
            android:textSize="10sp"
            android:fontFamily="@font/inter"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivChatImg"
            app:layout_constraintTop_toBottomOf="@+id/tv_ChatTitle"
            app:layout_constraintVertical_bias="0.506" />

        <TextView
            android:id="@+id/tv_ChatTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/chat_2"
            android:textSize="10sp"
            android:fontFamily="@font/inter"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>