<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanFragment"
    android:paddingTop="60dp"
    android:paddingBottom="80dp">

    <TextView
        android:id="@+id/text_scan1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_1"
        android:textSize="20sp"
        android:fontFamily="@font/julius_sans_one"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_scan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_2"
        android:textSize="17sp"
        android:fontFamily="@font/julius_sans_one"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_scan1" />

    <View
        android:id="@+id/view_scan1"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginTop="25dp"
        android:background="@color/orange"
        app:layout_constraintTop_toBottomOf="@+id/text_scan2" />

    <TextView
        android:id="@+id/text_scan3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/scan_3"
        android:gravity="center"
        android:fontFamily="@font/inter"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_scan1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/text_scan3" >

        <ImageView
            android:id="@+id/img_scan1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/scan_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_1"
        android:text="@string/scan_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1" />









</androidx.constraintlayout.widget.ConstraintLayout>