<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/transparent"
    app:cardElevation="0dp"
    app:cardCornerRadius="15dp"
    android:layout_marginTop="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:id="@+id/ivAbsenImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/desc_7"/>

        <TextView
            android:id="@+id/tv_AbsenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nilai_1"
            android:textSize="20sp"
            android:fontFamily="@font/inter"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ivAbsenImg"
            app:layout_constraintEnd_toEndOf="@+id/ivAbsenImg"
            app:layout_constraintStart_toStartOf="@+id/ivAbsenImg"
            app:layout_constraintTop_toTopOf="@+id/ivAbsenImg" />

        <TextView
            android:id="@+id/tv_ScoreTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/home_7"
            android:textSize="20sp"
            android:fontFamily="@font/inter"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ivAbsenImg"
            app:layout_constraintEnd_toEndOf="@+id/ivAbsenImg"
            app:layout_constraintTop_toTopOf="@+id/ivAbsenImg" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>