<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/orange"
    app:cardCornerRadius="15dp"
    android:elevation="-5dp"
    app:cardElevation="-5dp"
    android:padding="5dp"
    android:layout_margin="15dp"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivScoreImg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc_7"
            android:src="@drawable/home_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ScoreTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:text="@string/nilai_1"
            android:textSize="22sp"
            android:fontFamily="@font/inter"
            android:textColor="@color/white"

            app:layout_constraintBottom_toBottomOf="@+id/ivScoreImg"
            app:layout_constraintStart_toStartOf="@+id/ivScoreImg"
            app:layout_constraintTop_toTopOf="@+id/ivScoreImg" />

            <ImageView
                android:id="@+id/ivScoreImg2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_7"
                android:src="@drawable/home_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_ScoreTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nilai_a"
            android:textSize="25sp"
            android:fontFamily="@font/inter"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ivScoreImg2"
            app:layout_constraintEnd_toEndOf="@+id/ivScoreImg2"
            app:layout_constraintStart_toStartOf="@+id/ivScoreImg2"
            app:layout_constraintTop_toTopOf="@+id/ivScoreImg2" />


        </androidx.constraintlayout.widget.ConstraintLayout>









</androidx.cardview.widget.CardView>